--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+logging.level.web=debug
+logging.level.sql=trace
+logging.level.org.hibernate.type=trace
+logging.level.org.hibernate.orm.jdbc.bind=trace
